@@ -146,6 +146,7 @@ static void ConvertUsage(void)
       "-intent type         Absolute, Perceptual, Relative, or Saturation",
       "-interlace type      None, Line, Plane, or Partition",
       "-label name          assign a label to an image",
+      "-lat geometry        local adaptive thresholding",
       "-level value         adjust the level of image contrast",
       "-limit type value    Disk, Map, or Memory resource limit",
       "-list type           Color, Delegate, Format, Magic, Module, or Type",
