@@ -340,6 +340,12 @@ And here is a list of other image manipulation methods you can call:<br>
   <th>Description</th>
  </tr>
   <tr>
+ <td>AdaptiveThreshold</td>
+  <td>geometry=&gt;<i>geometry</i>, radius=&gt;<i>double</i>, sigma=&gt;<i>
+double</i>, offset=&gt;<i>double</i></td>
+  <td>local adaptive thresholding.</td>
+ </tr>
+  <tr>
  <td>AddNoise</td>
   <td>noise=&gt;{Uniform, Gaussian, Multiplicative, Impulse, Laplacian, Poisson}</td>
   <td>add noise to an image</td>
